--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -170,14 +170,13 @@
   <div class='mt2 pb2 bb'>
     <div class='flex flex-wrap items-center'>
       <div class='b'>sites</div>
-      <div class='flex-grow-1'></div>
       <div class='flex items-center'>
         <details class='relative ml2' data-autoclose-details>
           <summary role='button' title='Create' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
             {{ template "octicons-plus" }}
             {{ template "octicons-triangle-down" }}
           </summary>
-          <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+          <div class='absolute bg-white br2' style='top: calc(2rem + 4px); left: 0px; z-index: 1000; border: 1px solid black;'>
             <div class='ma2 tr'><a href='/files/createsite/' class='nowrap'>create site</a></div>
           </div>
         </details>
