--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -29,9 +29,9 @@
   <div class='ml2'><button type='button' class='button-danger ba br2 b--dark-red pv2 ph2'>clear</button></div>
 </div>
 
-{{- if eq (index $.PostGetRedirect "action") "/files/createsite/" }}
+{{- if eq (index $.PostRedirectGet "from") "createsite" }}
 <div role='alert' class='alert-success mv2 pa2 br2 flex items-center'>
-  <div>Site created: <a href='/files/{{ index $.PostGetRedirect "sitePrefix" }}/'>{{ index $.PostGetRedirect "sitePrefix" }}</a></div>
+  <div>Site created: <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ index $.PostRedirectGet "sitePrefix" }}</a></div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn color-success o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
