--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -31,7 +31,14 @@
 
 {{- if eq (index $.PostRedirectGet "from") "createsite" }}
 <div role='alert' class='alert-success mv2 pa2 br2 flex items-center'>
-  <div>Site created: <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ index $.PostRedirectGet "siteName" }}</a></div>
+  <div>Site created: <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ trimPrefix (index $.PostRedirectGet "sitePrefix") "@" }}</a></div>
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn color-success o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- end }}
+{{- if eq (index $.PostRedirectGet "from") "deletesite" }}
+<div role='alert' class='alert-success mv2 pa2 br2 flex items-center'>
+  <div>Site deleted: {{ index $.PostRedirectGet "siteName" }}</div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn color-success o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
