--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -30,15 +30,18 @@
 </div>
 
 {{- if eq (index $.PostRedirectGet "from") "createsite" }}
-<div role='alert' class='alert-success mv2 pa2 br2 flex items-center'>
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
   <div>Site created: <a href='/files/{{ index $.PostRedirectGet "sitePrefix" }}/'>{{ trimPrefix (index $.PostRedirectGet "sitePrefix") "@" }}</a></div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn color-success o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
 {{- if eq (index $.PostRedirectGet "from") "deletesite" }}
-<div role='alert' class='alert-success mv2 pa2 br2 flex items-center'>
-  <div>Site deleted: {{ index $.PostRedirectGet "siteName" }}</div>
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  <div class='flex items-center'>
+    {{ template "heroicons-trash" }}
+    <span class='ml2'>Site deleted: {{ index $.PostRedirectGet "siteName" }}</span>
+  </div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn color-success o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
@@ -199,7 +202,7 @@
       <div class='flex-grow-1'></div>
       <details class='relative' data-autoclose-details>
         <summary role='button' title='more actions' class='flex items-center button ba br2 b--black h2 hide-marker ph2 pointer' data-disable-click-selection>
-          {{ template "octicons-trash" }}
+          {{ template "heroicons-trash" }}
           {{ template "octicons-triangle-down" }}
         </summary>
         <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
@@ -350,5 +353,11 @@
 {{- define "octicons-trash" }}
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' width='16' height='16'>
   <path fill='currentColor' d='M11 1.75V3h2.25a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1 0-1.5H5V1.75C5 .784 5.784 0 6.75 0h2.5C10.216 0 11 .784 11 1.75ZM4.496 6.675l.66 6.6a.25.25 0 0 0 .249.225h5.19a.25.25 0 0 0 .249-.225l.66-6.6a.75.75 0 0 1 1.492.149l-.66 6.6A1.748 1.748 0 0 1 10.595 15h-5.19a1.75 1.75 0 0 1-1.741-1.575l-.66-6.6a.75.75 0 1 1 1.492-.15ZM6.5 1.75V3h3V1.75a.25.25 0 0 0-.25-.25h-2.5a.25.25 0 0 0-.25.25Z'></path>
+</svg>
+{{- end }}
+
+{{- define "heroicons-trash" }}
+<svg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke-width='1.5' stroke='currentColor'  width='16' height='16'>
+  <path stroke-linecap='round' stroke-linejoin='round' d='m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0' />
 </svg>
 {{- end }}
