--- a/embed/createfolder.html
+++ b/embed/createfolder.html
@@ -5,7 +5,7 @@
 <link rel='icon' href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 10 10%22><text y=%221em%22 font-size=%228%22>☕</text></svg>'>
 <style>{{ stylesCSS }}</style>
 <script type='module'>{{ baselineJS }}</script>
-<title>Create site</title>
+<title>Create folder</title>
 <body class='centered-body'>
 <nav class='mv2 bg-dark-cyan white flex flex-wrap items-center'>
   <a href='/files/' class='ma2 white'>🖋️☕ notebrew</a>
@@ -15,33 +15,29 @@
   <a href='/users/logout/' class='ma2'>logout</a>
   {{- end }}
 </nav>
-{{- if eq $.Error "MaxSitesReached" }}
+{{- if eq $.Error "MissingParent" "InvalidParent" }}
 <div class='mv5 w-80 w-70-m w-60-l center'>
   {{- if referer }}
   <div><a href='{{ referer }}' data-go-back>&larr; back</a></div>
   {{- end }}
-  <div class='mv3 b'>You have reached the maximum of {{ maxSites }} sites, cannot create any more.</div>
-  <ul class='ph3'>
-    {{- range $siteName := $.UserSiteNames }}
-    <li><a href='/files/{{ if not (contains $siteName ".") }}@{{ end }}{{ $siteName }}/'>{{ $siteName }}</a></li>
-    {{- end }}
-  </ul>
+  <div class='mv3 b tc'>Can't create a folder here.</div>
 </div>
 {{- else }}
-<form method='post' action='/files/createsite/' class='mv5 w-80 w-70-m w-60-l center'>
+<form method='post' action='/{{ join "files" $.SitePrefix "createfolder" }}/' class='mv5 w-80 w-70-m w-60-l center'>
   {{- if referer }}
   <div><a href='{{ referer }}' data-go-back>&larr; back</a></div>
   {{- end }}
-  <h1 class='f3 mv3 b'>Create a new site</h1>
+  <h1 class='f3 mv3 b'>Create a folder in <a href='/{{ join "files" $.SitePrefix $.Parent }}/'>{{ base $.Parent }}/</a></h1>
+  <input type='hidden' name='parent' value='{{ $.Parent }}'>
   <div class='mv3'>
-    <div><label for='siteName' class='b'>Site name:</label></div>
-    <input id='siteName' name='siteName' value='{{ $.SiteName }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "siteName" }} b--invalid-red{{ end }}' autocomplete='on' autofocus required>
+    <div><label for='name' class='b'>Name:</label></div>
+    <input id='name' name='name' value='{{ $.Name }}' class='pv1 ph2 br2 ba w-100{{ if index $.Errors "name" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>
     <ul>
-      {{- range $error := index $.FormErrors "siteName" }}
+      {{- range $error := index $.FormErrors "name" }}
       <li class='f6 invalid-red list-style-disc'>{{ $error }}</li>
       {{- end }}
     </ul>
   </div>
-  <button type='submit' class='button ba br2 pa2 mv3 w-100'>Create site</button>
+  <button type='submit' class='button ba br2 pa2 mv3 w-100'>Create folder</button>
 </form>
 {{- end }}
