--- a/embed/createfile.html
+++ b/embed/createfile.html
@@ -65,7 +65,7 @@
   </ul>
   {{- else }}
   <ul class='ph3 f6'>
-    <li class='list-style-disc'>my-template.html</li>
+    <li class='list-style-disc'>common-templates.html</li>
     <li class='list-style-disc'>my-styles.css</li>
     <li class='list-style-disc'>do-thing.js</li>
     <li class='list-style-disc'>text-markup.md</li>
