--- a/embed/createsite.html
+++ b/embed/createsite.html
@@ -36,7 +36,7 @@
   <div class='mv3'>
     <div><label for='siteName' class='b'>Site name:</label></div>
     <input id='siteName' name='siteName' value='{{ $.SiteName }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "siteName" }} b--invalid-red{{ end }}' autocomplete='on' autofocus required>
-    <ul>
+    <ul class='ph3'>
       {{- range $error := index $.FormErrors "siteName" }}
       <li class='f6 invalid-red list-style-disc'>{{ $error }}</li>
       {{- end }}
