--- a/embed/file.html
+++ b/embed/file.html
@@ -22,7 +22,19 @@
 </nav>
 {{- if eq (index $.PostRedirectGet "from") "createfile" }}
 <div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  {{- if eq (head $.FilePath) "pages" }}
+  <div>Page created</div>
+  {{- else if eq (head $.FilePath) "posts" }}
+  <div>Post created</div>
+  {{- else }}
   <div>File created</div>
+  {{- end }}
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- else if eq (index $.PostRedirectGet "from") "files" }}
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  <div>Saved</div>
   <div class='flex-grow-1'></div>
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
