--- a/embed/createfolder.html
+++ b/embed/createfolder.html
@@ -42,9 +42,9 @@
   <div class='mv3'>
     <div><label for='name' class='b'>Name:</label></div>
     <input id='name' name='name' value='{{ $.Name }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "name" }} b--invalid-red{{ end }}' autocomplete='on' required autofocus>
-    <ul class='ph3'>
+    <ul class='list-style-disc ph3 f6 invalid-red'>
       {{- range $error := index $.FormErrors "name" }}
-      <li class='f6 invalid-red list-style-disc'>{{ $error }}</li>
+      <li>{{ $error }}</li>
       {{- end }}
     </ul>
   </div>
