--- a/embed/createsite.html
+++ b/embed/createsite.html
@@ -36,9 +36,9 @@
   <div class='mv3'>
     <div><label for='siteName' class='b'>Site name:</label></div>
     <input id='siteName' name='siteName' value='{{ $.SiteName }}' class='pv1 ph2 br2 ba w-100{{ if index $.FormErrors "siteName" }} b--invalid-red{{ end }}' autocomplete='on' autofocus required>
-    <ul class='ph3'>
+    <ul class='list-style-disc ph3 f6 invalid-red'>
       {{- range $error := index $.FormErrors "siteName" }}
-      <li class='f6 invalid-red list-style-disc'>{{ $error }}</li>
+      <li>{{ $error }}</li>
       {{- end }}
     </ul>
   </div>
