--- a/embed/list_directory.html
+++ b/embed/list_directory.html
@@ -37,6 +37,13 @@
   <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
 </div>
 {{- end }}
+{{- if eq (index $.PostRedirectGet "from") "delete" }}
+<div role='alert' class='alert mv2 pa2 br2 flex items-center'>
+  <div>{{ index $.PostRedirectGet "msg" }}</div>
+  <div class='flex-grow-1'></div>
+  <button class='f3 bg-transparent bn o-70 hover-black' data-dismiss-alert>&times;</button>
+</div>
+{{- end }}
 <div class='dashed-border mv2 pa2 br2 flex items-center'>
   <div class='flex-grow-1 truncate'><a href=''>5 items copied</a>: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
   <div class='ml2'><button type='button' class='button ba br2 pv2 ph2'>paste</button></div>
@@ -121,45 +128,48 @@
 </div>
 <div class='bb pb2'>{{ generateBreadcrumbLinks $.SitePrefix $.FilePath }}</div>
 {{- if $.Files }}
-<ul>
-  {{- range $file := $.Files }}
-  <li class='bb pv2'>
-    <label for='{{ $file.Name }}' class='flex items-center pointer' data-disable-click-selection>
-      {{- if not $READ_ONLY }}
-      <div class='mr2'>
-        <input type='checkbox' id='{{ $file.Name }}' name='name' value='{{ $file.Name }}' class='pointer'>
-      </div>
-      {{- end }}
-      <div class='br2 truncate'>
-        <div class='flex items-center'>
-          {{- if $file.IsDir }}
-          <span class="mr2 flex items-center">{{ template "heroicons-folder-open" }}</span>
-          {{- end }}
-          <a href='/{{ join "files" $.SitePrefix $.FilePath $file.Name }}{{ if $file.IsDir }}/{{ end }}' class='mv1 truncate'>{{ $file.Name }}{{ if $file.IsDir }}/{{ end }}</a>
-          {{- if not $file.IsDir }}
-          <span class='ma1 f6 mid-gray'>{{ fileSizeToString $file.Size }}</span>
-          {{- end }}
+<form>
+  <input type='hidden' name='parent' value='{{ $.FilePath }}'>
+  <ul>
+    {{- range $file := $.Files }}
+    <li class='bb pv2'>
+      <label for='{{ $file.Name }}' class='flex items-center pointer' data-disable-click-selection>
+        {{- if not $READ_ONLY }}
+        <div class='mr2'>
+          <input type='checkbox' id='{{ $file.Name }}' name='name' value='{{ $file.Name }}' class='pointer'>
         </div>
-      </div>
-      <div class='flex-grow-1'></div>
-      {{- if not $READ_ONLY }}
-      <details class='relative' data-autoclose-details>
-        <summary role='button' title='more actions' class='flex items-center button ba br2 b--black h2 hide-marker ph2' data-disable-click-selection>
-          {{ template "heroicons-ellipsis-horizontal" }}
-          {{ template "octicons-triangle-down" }}
-        </summary>
-        <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-          <div class='ma2 tc'><a href=''>rename</a></div>
-          <div class='ma2'><button type='submit' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
-          <div class='ma2'><button type='submit' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
-          <div class='ma2'><button type='submit' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $file.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div>
+        {{- end }}
+        <div class='br2 truncate'>
+          <div class='flex items-center'>
+            {{- if $file.IsDir }}
+            <span class="mr2 flex items-center">{{ template "heroicons-folder-open" }}</span>
+            {{- end }}
+            <a href='/{{ join "files" $.SitePrefix $.FilePath $file.Name }}{{ if $file.IsDir }}/{{ end }}' class='mv1 truncate'>{{ $file.Name }}{{ if $file.IsDir }}/{{ end }}</a>
+            {{- if not $file.IsDir }}
+            <span class='ma1 f6 mid-gray'>{{ fileSizeToString $file.Size }}</span>
+            {{- end }}
+          </div>
         </div>
-      </details>
-      {{- end }}
-    </label>
-  </li>
-  {{- end }}
-</ul>
+        <div class='flex-grow-1'></div>
+        {{- if not $READ_ONLY }}
+        <details class='relative' data-autoclose-details>
+          <summary role='button' title='more actions' class='flex items-center button ba br2 b--black h2 hide-marker ph2' data-disable-click-selection>
+            {{ template "heroicons-ellipsis-horizontal" }}
+            {{ template "octicons-triangle-down" }}
+          </summary>
+          <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+            <div class='ma2 tc'><a href=''>rename</a></div>
+            <div class='ma2'><button type='submit' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>cut</button></div>
+            <div class='ma2'><button type='submit' name='name' value='{{ $file.Name }}' class='button ba br2 pa2 w-100'>copy</button></div>
+            <div class='ma2'><button type='submit' formaction='/{{ join "files" $.SitePrefix "delete" }}/' name='name' value='{{ $file.Name }}' class='button-danger ba br2 b--dark-red pa2 w-100'>delete</button></div>
+          </div>
+        </details>
+        {{- end }}
+      </label>
+    </li>
+    {{- end }}
+  </ul>
+</form>
 {{- else }}
   {{- if and (not $.From) (not $.Before) }}
   <div class='mv4 tc'>
