--- a/embed/file.html
+++ b/embed/file.html
@@ -40,7 +40,7 @@
 </div>
 {{- end }}
 <div class='mv2'>
-  {{- if referer }}
+  {{- if and referer (ne (index $.PostRedirectGet "from") "createfile") }}
   <a href='{{ referer }}' data-go-back>&larr; back</a>
   <span>&boxv;</span>
   {{- end }}
