--- a/embed/list_root_directory.html
+++ b/embed/list_root_directory.html
@@ -50,30 +50,32 @@
 {{- if $.Files }}
 <div class='mv2 flex flex-wrap items-center'>
   <div class='flex-grow-1'></div>
+  <a href=''>site settings</a>
   <div class='flex items-center'>
     <details class='relative ml2' data-autoclose-details>
-      <summary role='button' title='Misc' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
-        {{ template "heroicons-ellipsis-horizontal" }}
+      <summary role='button' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
+        {{ template "octicons-sync" }}
         {{ template "octicons-triangle-down" }}
       </summary>
-      <div class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
-        <div class='ma2 tr'><a href='' class='nowrap'>site settings</a></div>
+      <form class='absolute bg-white br2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
         <div class='ma2 tr'><button type='button' class='button ba br2 pa2 nowrap'>regenerate site</button></div>
-      </div>
+      </form>
     </details>
   </div>
+  {{- if $.SearchSupported }}
   <div class='flex items-center'>
     <details class='relative ml2' data-autoclose-details>
       <summary role='button' title='Search' class='pointer flex items-center button ba br2 b--black ph2 h2 hide-marker' data-disable-click-selection>
         {{ template "octicons-search" }}
         {{ template "octicons-triangle-down" }}
       </summary>
-      <form class='absolute bg-white br2 pa2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
+      <form method='get' action='/{{ join "files" $.SitePrefix "search" }}/' class='absolute bg-white br2 pa2' style='top: calc(2rem + 4px); right: 0px; z-index: 1000; border: 1px solid black;'>
         <input id='search' name='search' placeholder='search this folder' class='pa2 br2 ba'>
         <button type='submit' class='button ba br2 pa2 w-100 mt2'>search</button>
       </form>
     </details>
   </div>
+  {{- end }}
 </div>
 <div class='bb pb2'><a href='/files/'>files</a> /{{ if $.SitePrefix }} <a href='/files/{{ $.SitePrefix }}/'>{{ $.SitePrefix }}</a> /{{ end }}</div>
 <ul class='mb4'>
